--- a/css/theme.css
+++ b/css/theme.css
@@ -4865,7 +4865,7 @@ html.side-header-hamburguer-sidebar-narrow-bar .slider-container {
 }
 
 .page-header h1 {
-	color: #fff;
+	color: #3b3b3b;
 	display: inline-block;
 	font-size: 30px;
 	line-height: 1;
